--- a/GIT-ICE-KTS/Base.lproj/Main.storyboard
+++ b/GIT-ICE-KTS/Base.lproj/Main.storyboard
@@ -61,16 +61,19 @@
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <state key="normal" title="Hi"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="192" y="215" width="30" height="30"/>
+                                    <rect key="frame" x="128" y="215" width="145" height="30"/>
                                 </variation>
+                                <connections>
+                                    <action selector="subit:" destination="LND-OD-XyN" eventType="touchUpInside" id="jXF-Vc-swE"/>
+                                </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I Love You!!!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RfA-LP-cnS">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RfA-LP-cnS">
                                 <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="168" y="76" width="93" height="21"/>
+                                    <rect key="frame" x="83" y="71" width="174" height="31"/>
                                 </variation>
                             </label>
                         </subviews>
@@ -89,6 +92,9 @@
                         </variation>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" image="first" id="OF0-8Y-8pr"/>
+                    <connections>
+                        <outlet property="lbl" destination="RfA-LP-cnS" id="fYV-rP-LWx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="It5-YM-IIG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
